--- a/mirimoe.css
+++ b/mirimoe.css
@@ -1,3 +1,60 @@
-*{
+
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  align-items: center;
+  display: flex;
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    "Helvetica Neue",
+    sans-serif;
+  color:#fff;
+}
+
+.container {
+  position: sticky;
+    z-index: 999;
+    text-shadow: 4px 2px #000;
+  margin: 0 auto;
+  text-align: center;
+}
+
+li {
+  display: inline-block;
+  font-size: 1.5em;
+  list-style-type: none;
+  padding: 1em;
+  text-transform: uppercase;
+}
+
+li span {
+  display: block;
+  font-size: 4.5rem;
+}
+
+@media all and (max-width: 768px) {
+
+
+  li {
+    font-size: 1.125rem;
+    padding: .75rem;
+  }
+
+  li span {
+    font-size: 3.375rem;
+  }
 }
